适配所有旋转数据

--- a/Resources/UI/AppMainWindow.ui
+++ b/Resources/UI/AppMainWindow.ui
@@ -57,6 +57,19 @@
         </widget>
        </item>
        <item>
+        <widget class="QToolButton" name="VisibleBtn">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>visible</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
